# git-toolkit

./: .gitignore  CONTINUITY.md  README.md  git-config-repos.json  git-config-repos.schema.json  git-config-repos.sh  git-toolkit.jsonc  git-toolkit.schema.json  go.mod
.claude/: CLAUDE.md  settings.json  settings.local.json
.claude/rules/: cpp-coding.md  skills-authoring.md
cmd/cli/: account_cmd.go  clone_cmd.go  config_cmd.go  init_cmd.go  main.go  migrate_cmd.go  pull_cmd.go  repo_cmd.go  source_cmd.go  status_cmd.go  version_cmd.go
cmd/gui/: main.go
docs/: architecture.md  developer-guide.md  migration.md  user-guide.md
git-config-repos/docs/: README.md
git-status-pull/docs/: README.md
git-toolkit/: CMakeLists.txt
git-toolkit/cli/: CMakeLists.txt  main.cpp
git-toolkit/core/: CMakeLists.txt
git-toolkit/core/include/gittoolkit/: config.h  engine.h  git_ops.h  log.h  platform.h  sync_status.h
git-toolkit/core/src/: config.cpp  engine.cpp  git_ops.cpp  log.cpp  platform.cpp  sync_status.cpp
git-toolkit/core/tests/: CMakeLists.txt  test_config.cpp  test_log.cpp  test_platform.cpp  test_sync_status.cpp
git-toolkit/docs/: README.md  building.md
git-toolkit/gui/windows/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  app.manifest  main.cpp
pkg/config/: config.go  config_test.go  crud_test.go  load.go  migrate.go  path.go
pkg/git/: git.go
pkg/provider/: provider.go
pkg/status/: status.go  status_test.go
